--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -17,7 +17,8 @@ phases:
       - git clone https://github.com/gopal1gupta/demoargocd
       - ls
       - sed --version
-      - sudo yum install sed
+      - yum install sed -y
+      - sed --version
 
 
   build:
