--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -17,10 +17,8 @@ phases:
       - git clone https://github.com/gopal1gupta/demoargocd
       - ls
       - sed --version
-      - apt-get install sed -y
-      - apt-get update 
-      - sed --version
-      - sed -i 's/"gopalgupta123456789/week4:latest"/"${IMAGE_REPO}/${NAME}:${TAG}"/g' deployment.yaml
+
+      
 
 
   build:
@@ -30,6 +28,7 @@ phases:
       - docker build -t week4 .
       - docker tag  week4:latest ${IMAGE_REPO}/${NAME}:${TAG}
       - docker push ${IMAGE_REPO}/${NAME}:${TAG}
+      - sed -i 's|gopalgupta123456789/week4:latest|${IMAGE_REPO}/${NAME}:${TAG}|g' deployment.yaml
   
       - git add .
       - git commit -m "updating deployment.yaml"
