--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,14 +11,10 @@ phases:
       - echo pre_build step...
       - docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASS
       - echo configuring git credential
-      - git config --global user.email "gopalgupta8013@gmail.com"
-      - git config --global user.name "gopal1gupta"
-      - git remote set-url origin "http://${GIT_TOKEN}@github.com/gopal1gupta/demoargocd"
       - git clone https://github.com/gopal1gupta/demoargocd
       - ls
       - sed --version 
-      - git branch
-      - git remote -v
+
 
       
 
@@ -31,10 +27,14 @@ phases:
       - docker tag  week4:latest ${IMAGE_REPO}/${NAME}:${TAG}
       - docker push ${IMAGE_REPO}/${NAME}:${TAG}
       - sed -i 's|gopalgupta123456789/week4:latest|${IMAGE_REPO}/${NAME}:${TAG}|g' deployment.yaml
-  
+      - git config --global user.email "gopalgupta8013@gmail.com"
+      - git config --global user.name "gopal1gupta"
+      - git remote set-url origin "https://${GIT_TOKEN}@github.com/gopal1gupta/demoargocd"
+      - git branch
+      - git remote -v
       - git add .
       - git commit -m "updating deployment.yaml"
-      - git push origin 
+      - git push origin main
 
     post_build:
       commands:
