--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,7 +7,8 @@ env:
     GIT_TOKEN: "arn:aws:secretsmanager:${AWS_REGION}:${AWS_ACCOUNT_NO}:secret:dockerhub-Y24wXP:git_token"
     
   exported-variables:
-    - CODEBUILD_BUILD_ID
+    #- CODEBUILD_BUILD_ID
+    - CODEBUILD_BUILD_NUMBER
 
 phases:
   install:
@@ -28,10 +29,10 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...
       - docker build -t week4 .
-      - docker tag  week4:latest ${IMAGE_REPO}/${NAME}:$CODEBUILD_BUILD_ID
-      - docker push ${IMAGE_REPO}/${NAME}:$CODEBUILD_BUILD_ID
+      - docker tag  week4:latest ${IMAGE_REPO}/${NAME}:$CODEBUILD_BUILD_NUMBER
+      - docker push ${IMAGE_REPO}/${NAME}:$CODEBUILD_BUILD_NUMBER
       - cd demoargocd
-      - sed -i "s|gopalgupta12345678.*|${IMAGE_REPO}/${NAME}:$CODEBUILD_BUILD_ID|g" deployment.yaml
+      - sed -i "s|gopalgupta12345678.*|${IMAGE_REPO}/${NAME}:$CODEBUILD_BUILD_NUMBER|g" deployment.yaml
       - git config --global user.email "gopalgupta8013@gmail.com"
       - git config --global user.name "gopal1gupta"
       - git remote set-url origin "https://${GIT_TOKEN}@github.com/gopal1gupta/demoargocd"
