--- a/service.yaml
+++ b/service.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapp-svc
+  labels:
+    app: webapp
 spec:
   type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 80
   selector:
     app: webapp
-  ports:
-    - port: 80         # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
-      targetPort: 80   # Optional field.
-      nodePort: 30018
